# link-page

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  config.toml  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: logger.py  main.py  middleware.py
app/config/: __init__.py  settings.py
app/resources/: __init__.py  home.py  routes.py
app/static/: main.css  main.js
app/static/templates/: error.html  index.html
